// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Item component  expected close item edit form when close button is clicked 1`] = `
<Item
  Component={[Function]}
  content="recipe"
  delete={[Function]}
  directions={false}
  editItem={[Function]}
  handleSubmit={[Function]}
  index={1}
  ingredients={true}
  name="ingredients"
  placeholder=""
  uniquenessChecker={[Function]}
>
  <div
    className="d-flex flex-column "
  >
    <ListItem
      className="items-list-item"
      content="recipe"
      handleClick={[Function]}
      index={0}
    >
      <div
        className="lead list-item items-list-item"
      >
        <div
          className="list-item-text lead"
          data-index={0}
          onClick={[Function]}
          role="button"
          tabIndex="0"
        >
          recipe
        </div>
        <ListItemIcons
          deleteIconClicked={[Function]}
          editIconClicked={[Function]}
        >
          <div
            className="d-flex align-items-center"
          >
            <Icon
              active=""
              className="items-list-item-icon icon"
              dataTarget=""
              dataToggle=""
              handleClick={[Function]}
              iconClass="fa fa-pencil"
              id="editIcon"
              onMouseEnter={[Function]}
              parentClass=""
              pointer={false}
              tip="hello"
              toolTip={false}
              toolTipId=""
              toolTipPlace="bottom"
              toolTipType="dark"
            >
              <div
                className="icon-wrapper"
                onClick={[Function]}
                onMouseEnter={[Function]}
                role="button"
                tabIndex="0"
              >
                <i
                  className="icon fa fa-pencil items-list-item-icon icon"
                  data-for=""
                  data-target=""
                  data-tip="hello"
                  data-toggle=""
                >
                  <span />
                </i>
              </div>
            </Icon>
            <Icon
              active=""
              className="items-list-item-icon icon"
              dataTarget=""
              dataToggle=""
              handleClick={[Function]}
              iconClass="fa fa-trash"
              id="deleteIcon"
              onMouseEnter={[Function]}
              parentClass=""
              pointer={false}
              tip="hello"
              toolTip={false}
              toolTipId=""
              toolTipPlace="bottom"
              toolTipType="dark"
            >
              <div
                className="icon-wrapper"
                onClick={[Function]}
                onMouseEnter={[Function]}
                role="button"
                tabIndex="0"
              >
                <i
                  className="icon fa fa-trash items-list-item-icon icon"
                  data-for=""
                  data-target=""
                  data-tip="hello"
                  data-toggle=""
                >
                  <span />
                </i>
              </div>
            </Icon>
          </div>
        </ListItemIcons>
      </div>
    </ListItem>
  </div>
</Item>
`;

exports[`Item component  expected save changes made during item edit when save button
  is clicked 1`] = `
<Item
  Component={[Function]}
  content="recipe"
  delete={[Function]}
  directions={false}
  editItem={[Function]}
  handleSubmit={[Function]}
  index={1}
  ingredients={true}
  name="ingredients"
  placeholder=""
  uniquenessChecker={[Function]}
>
  <div
    className="d-flex flex-column "
  >
    <ListItem
      className="items-list-item"
      content="recipe"
      handleClick={[Function]}
      index={0}
    >
      <div
        className="lead list-item items-list-item"
      >
        <div
          className="list-item-text lead"
          data-index={0}
          onClick={[Function]}
          role="button"
          tabIndex="0"
        >
          recipe
        </div>
        <ListItemIcons
          deleteIconClicked={[Function]}
          editIconClicked={[Function]}
        >
          <div
            className="d-flex align-items-center"
          >
            <Icon
              active=""
              className="items-list-item-icon icon"
              dataTarget=""
              dataToggle=""
              handleClick={[Function]}
              iconClass="fa fa-pencil"
              id="editIcon"
              onMouseEnter={[Function]}
              parentClass=""
              pointer={false}
              tip="hello"
              toolTip={false}
              toolTipId=""
              toolTipPlace="bottom"
              toolTipType="dark"
            >
              <div
                className="icon-wrapper"
                onClick={[Function]}
                onMouseEnter={[Function]}
                role="button"
                tabIndex="0"
              >
                <i
                  className="icon fa fa-pencil items-list-item-icon icon"
                  data-for=""
                  data-target=""
                  data-tip="hello"
                  data-toggle=""
                >
                  <span />
                </i>
              </div>
            </Icon>
            <Icon
              active=""
              className="items-list-item-icon icon"
              dataTarget=""
              dataToggle=""
              handleClick={[Function]}
              iconClass="fa fa-trash"
              id="deleteIcon"
              onMouseEnter={[Function]}
              parentClass=""
              pointer={false}
              tip="hello"
              toolTip={false}
              toolTipId=""
              toolTipPlace="bottom"
              toolTipType="dark"
            >
              <div
                className="icon-wrapper"
                onClick={[Function]}
                onMouseEnter={[Function]}
                role="button"
                tabIndex="0"
              >
                <i
                  className="icon fa fa-trash items-list-item-icon icon"
                  data-for=""
                  data-target=""
                  data-tip="hello"
                  data-toggle=""
                >
                  <span />
                </i>
              </div>
            </Icon>
          </div>
        </ListItemIcons>
      </div>
    </ListItem>
  </div>
</Item>
`;

exports[`Item component  expected to render Accordion when props.directions is true 1`] = `
<Item
  Component={[Function]}
  content="recipe"
  delete={[Function]}
  directions={true}
  editItem={[Function]}
  handleSubmit={[Function]}
  index={1}
  ingredients={false}
  name="ingredients"
  placeholder=""
  uniquenessChecker={[Function]}
>
  <div
    className="d-flex flex-column "
  >
    <Accordion
      className="flex-column items-list-item"
      id="ingredients"
      index={1}
    >
      <ListItem
        className="flex-column items-list-item accordion"
        content=""
        handleClick={[Function]}
        index={0}
      >
        <div
          className="lead list-item flex-column items-list-item accordion"
        >
          <AccordionHeader
            className="d-flex justify-content-between w-100"
            id="ingredients"
            index={1}
            title="Step 2: recipe"
          >
            <div
              className="d-flex justify-content-between w-100"
              id="accordion1"
              role="tab"
            >
              <h4
                className="mb-0 flex-auto ellipsis"
                style={
                  Object {
                    "margin": ".1em",
                  }
                }
              >
                <a
                  aria-controls="ingredients"
                  aria-expanded="false"
                  className="collapsed collapse-trigger lead a"
                  data-toggle="collapse"
                  href="#item1"
                >
                  Step 2: recipe
                </a>
              </h4>
              <ListItemIcons
                deleteIconClicked={[Function]}
                editIconClicked={[Function]}
              >
                <div
                  className="d-flex align-items-center"
                >
                  <Icon
                    active=""
                    className="items-list-item-icon icon"
                    dataTarget=""
                    dataToggle=""
                    handleClick={[Function]}
                    iconClass="fa fa-pencil"
                    id="editIcon"
                    onMouseEnter={[Function]}
                    parentClass=""
                    pointer={false}
                    tip="hello"
                    toolTip={false}
                    toolTipId=""
                    toolTipPlace="bottom"
                    toolTipType="dark"
                  >
                    <div
                      className="icon-wrapper"
                      onClick={[Function]}
                      onMouseEnter={[Function]}
                      role="button"
                      tabIndex="0"
                    >
                      <i
                        className="icon fa fa-pencil items-list-item-icon icon"
                        data-for=""
                        data-target=""
                        data-tip="hello"
                        data-toggle=""
                      >
                        <span />
                      </i>
                    </div>
                  </Icon>
                  <Icon
                    active=""
                    className="items-list-item-icon icon"
                    dataTarget=""
                    dataToggle=""
                    handleClick={[Function]}
                    iconClass="fa fa-trash"
                    id="deleteIcon"
                    onMouseEnter={[Function]}
                    parentClass=""
                    pointer={false}
                    tip="hello"
                    toolTip={false}
                    toolTipId=""
                    toolTipPlace="bottom"
                    toolTipType="dark"
                  >
                    <div
                      className="icon-wrapper"
                      onClick={[Function]}
                      onMouseEnter={[Function]}
                      role="button"
                      tabIndex="0"
                    >
                      <i
                        className="icon fa fa-trash items-list-item-icon icon"
                        data-for=""
                        data-target=""
                        data-tip="hello"
                        data-toggle=""
                      >
                        <span />
                      </i>
                    </div>
                  </Icon>
                </div>
              </ListItemIcons>
            </div>
          </AccordionHeader>
          <AccordionBody
            className=""
            id="ingredients"
            index={1}
          >
            <div
              className="collapse w-100"
              data-parent="#ingredients"
              id="item1"
              role="tabpanel"
            >
              <div
                className="card-body accordion-text"
              >
                <p>
                  recipe
                </p>
              </div>
            </div>
          </AccordionBody>
        </div>
      </ListItem>
    </Accordion>
  </div>
</Item>
`;

exports[`Item component  expected to render ListItem when props.ingredients is true 1`] = `
<Item
  Component={[Function]}
  content="recipe"
  delete={[Function]}
  directions={false}
  editItem={[Function]}
  handleSubmit={[Function]}
  index={1}
  ingredients={true}
  name="ingredients"
  placeholder=""
  uniquenessChecker={[Function]}
>
  <div
    className="d-flex flex-column "
  >
    <ListItem
      className="items-list-item"
      content="recipe"
      handleClick={[Function]}
      index={0}
    >
      <div
        className="lead list-item items-list-item"
      >
        <div
          className="list-item-text lead"
          data-index={0}
          onClick={[Function]}
          role="button"
          tabIndex="0"
        >
          recipe
        </div>
        <ListItemIcons
          deleteIconClicked={[Function]}
          editIconClicked={[Function]}
        >
          <div
            className="d-flex align-items-center"
          >
            <Icon
              active=""
              className="items-list-item-icon icon"
              dataTarget=""
              dataToggle=""
              handleClick={[Function]}
              iconClass="fa fa-pencil"
              id="editIcon"
              onMouseEnter={[Function]}
              parentClass=""
              pointer={false}
              tip="hello"
              toolTip={false}
              toolTipId=""
              toolTipPlace="bottom"
              toolTipType="dark"
            >
              <div
                className="icon-wrapper"
                onClick={[Function]}
                onMouseEnter={[Function]}
                role="button"
                tabIndex="0"
              >
                <i
                  className="icon fa fa-pencil items-list-item-icon icon"
                  data-for=""
                  data-target=""
                  data-tip="hello"
                  data-toggle=""
                >
                  <span />
                </i>
              </div>
            </Icon>
            <Icon
              active=""
              className="items-list-item-icon icon"
              dataTarget=""
              dataToggle=""
              handleClick={[Function]}
              iconClass="fa fa-trash"
              id="deleteIcon"
              onMouseEnter={[Function]}
              parentClass=""
              pointer={false}
              tip="hello"
              toolTip={false}
              toolTipId=""
              toolTipPlace="bottom"
              toolTipType="dark"
            >
              <div
                className="icon-wrapper"
                onClick={[Function]}
                onMouseEnter={[Function]}
                role="button"
                tabIndex="0"
              >
                <i
                  className="icon fa fa-trash items-list-item-icon icon"
                  data-for=""
                  data-target=""
                  data-tip="hello"
                  data-toggle=""
                >
                  <span />
                </i>
              </div>
            </Icon>
          </div>
        </ListItemIcons>
      </div>
    </ListItem>
  </div>
</Item>
`;

exports[`Item component  expected to render item edit form when edit item icon is clicked 1`] = `
<Item
  Component={[Function]}
  content="recipe"
  delete={[Function]}
  directions={false}
  editItem={[Function]}
  handleSubmit={[Function]}
  index={1}
  ingredients={true}
  name="ingredients"
  placeholder=""
  uniquenessChecker={[Function]}
>
  <div
    className="d-flex flex-column "
  >
    <ListItem
      className="items-list-item"
      content="recipe"
      handleClick={[Function]}
      index={0}
    >
      <div
        className="lead list-item items-list-item"
      >
        <div
          className="list-item-text lead"
          data-index={0}
          onClick={[Function]}
          role="button"
          tabIndex="0"
        >
          recipe
        </div>
        <ListItemIcons
          deleteIconClicked={[Function]}
          editIconClicked={[Function]}
        >
          <div
            className="d-flex align-items-center"
          >
            <Icon
              active=""
              className="items-list-item-icon icon"
              dataTarget=""
              dataToggle=""
              handleClick={[Function]}
              iconClass="fa fa-pencil"
              id="editIcon"
              onMouseEnter={[Function]}
              parentClass=""
              pointer={false}
              tip="hello"
              toolTip={false}
              toolTipId=""
              toolTipPlace="bottom"
              toolTipType="dark"
            >
              <div
                className="icon-wrapper"
                onClick={[Function]}
                onMouseEnter={[Function]}
                role="button"
                tabIndex="0"
              >
                <i
                  className="icon fa fa-pencil items-list-item-icon icon"
                  data-for=""
                  data-target=""
                  data-tip="hello"
                  data-toggle=""
                >
                  <span />
                </i>
              </div>
            </Icon>
            <Icon
              active=""
              className="items-list-item-icon icon"
              dataTarget=""
              dataToggle=""
              handleClick={[Function]}
              iconClass="fa fa-trash"
              id="deleteIcon"
              onMouseEnter={[Function]}
              parentClass=""
              pointer={false}
              tip="hello"
              toolTip={false}
              toolTipId=""
              toolTipPlace="bottom"
              toolTipType="dark"
            >
              <div
                className="icon-wrapper"
                onClick={[Function]}
                onMouseEnter={[Function]}
                role="button"
                tabIndex="0"
              >
                <i
                  className="icon fa fa-trash items-list-item-icon icon"
                  data-for=""
                  data-target=""
                  data-tip="hello"
                  data-toggle=""
                >
                  <span />
                </i>
              </div>
            </Icon>
          </div>
        </ListItemIcons>
      </div>
    </ListItem>
  </div>
</Item>
`;

exports[`Item component  expected to render item edit form when edit item icon is clicked 2`] = `
<Item
  Component={[Function]}
  content="recipe"
  delete={[Function]}
  directions={false}
  editItem={[Function]}
  handleSubmit={[Function]}
  index={1}
  ingredients={true}
  name="ingredients"
  placeholder=""
  uniquenessChecker={[Function]}
>
  <div
    className="d-flex flex-column "
  >
    <ListItem
      className="items-list-item"
      content="recipe"
      handleClick={[Function]}
      index={0}
    >
      <div
        className="lead list-item items-list-item"
      >
        <div
          className="list-item-text lead"
          data-index={0}
          onClick={[Function]}
          role="button"
          tabIndex="0"
        >
          recipe
        </div>
        <ListItemIcons
          deleteIconClicked={[Function]}
          editIconClicked={[Function]}
        >
          <div
            className="d-flex align-items-center"
          >
            <Icon
              active=""
              className="items-list-item-icon icon"
              dataTarget=""
              dataToggle=""
              handleClick={[Function]}
              iconClass="fa fa-pencil"
              id="editIcon"
              onMouseEnter={[Function]}
              parentClass=""
              pointer={false}
              tip="hello"
              toolTip={false}
              toolTipId=""
              toolTipPlace="bottom"
              toolTipType="dark"
            >
              <div
                className="icon-wrapper"
                onClick={[Function]}
                onMouseEnter={[Function]}
                role="button"
                tabIndex="0"
              >
                <i
                  className="icon fa fa-pencil items-list-item-icon icon"
                  data-for=""
                  data-target=""
                  data-tip="hello"
                  data-toggle=""
                >
                  <span />
                </i>
              </div>
            </Icon>
            <Icon
              active=""
              className="items-list-item-icon icon"
              dataTarget=""
              dataToggle=""
              handleClick={[Function]}
              iconClass="fa fa-trash"
              id="deleteIcon"
              onMouseEnter={[Function]}
              parentClass=""
              pointer={false}
              tip="hello"
              toolTip={false}
              toolTipId=""
              toolTipPlace="bottom"
              toolTipType="dark"
            >
              <div
                className="icon-wrapper"
                onClick={[Function]}
                onMouseEnter={[Function]}
                role="button"
                tabIndex="0"
              >
                <i
                  className="icon fa fa-trash items-list-item-icon icon"
                  data-for=""
                  data-target=""
                  data-tip="hello"
                  data-toggle=""
                >
                  <span />
                </i>
              </div>
            </Icon>
          </div>
        </ListItemIcons>
      </div>
    </ListItem>
  </div>
</Item>
`;

exports[`Item component  should remove item from the list when delete item icon is clicked 1`] = `
<Item
  Component={[Function]}
  content="recipe"
  delete={[Function]}
  directions={false}
  editItem={[Function]}
  handleSubmit={[Function]}
  index={1}
  ingredients={true}
  name="ingredients"
  placeholder=""
  uniquenessChecker={[Function]}
>
  <div
    className="d-flex flex-column "
  >
    <ListItem
      className="items-list-item"
      content="recipe"
      handleClick={[Function]}
      index={0}
    >
      <div
        className="lead list-item items-list-item"
      >
        <div
          className="list-item-text lead"
          data-index={0}
          onClick={[Function]}
          role="button"
          tabIndex="0"
        >
          recipe
        </div>
        <ListItemIcons
          deleteIconClicked={[Function]}
          editIconClicked={[Function]}
        >
          <div
            className="d-flex align-items-center"
          >
            <Icon
              active=""
              className="items-list-item-icon icon"
              dataTarget=""
              dataToggle=""
              handleClick={[Function]}
              iconClass="fa fa-pencil"
              id="editIcon"
              onMouseEnter={[Function]}
              parentClass=""
              pointer={false}
              tip="hello"
              toolTip={false}
              toolTipId=""
              toolTipPlace="bottom"
              toolTipType="dark"
            >
              <div
                className="icon-wrapper"
                onClick={[Function]}
                onMouseEnter={[Function]}
                role="button"
                tabIndex="0"
              >
                <i
                  className="icon fa fa-pencil items-list-item-icon icon"
                  data-for=""
                  data-target=""
                  data-tip="hello"
                  data-toggle=""
                >
                  <span />
                </i>
              </div>
            </Icon>
            <Icon
              active=""
              className="items-list-item-icon icon"
              dataTarget=""
              dataToggle=""
              handleClick={[Function]}
              iconClass="fa fa-trash"
              id="deleteIcon"
              onMouseEnter={[Function]}
              parentClass=""
              pointer={false}
              tip="hello"
              toolTip={false}
              toolTipId=""
              toolTipPlace="bottom"
              toolTipType="dark"
            >
              <div
                className="icon-wrapper"
                onClick={[Function]}
                onMouseEnter={[Function]}
                role="button"
                tabIndex="0"
              >
                <i
                  className="icon fa fa-trash items-list-item-icon icon"
                  data-for=""
                  data-target=""
                  data-tip="hello"
                  data-toggle=""
                >
                  <span />
                </i>
              </div>
            </Icon>
          </div>
        </ListItemIcons>
      </div>
    </ListItem>
  </div>
</Item>
`;

exports[`Item component  should remove item from the list when delete item icon is clicked 2`] = `
<Item
  Component={[Function]}
  content="recipe"
  delete={[Function]}
  directions={false}
  editItem={[Function]}
  handleSubmit={[Function]}
  index={1}
  ingredients={true}
  name="ingredients"
  placeholder=""
  uniquenessChecker={[Function]}
>
  <div
    className="d-flex flex-column "
  >
    <ListItem
      className="items-list-item"
      content="recipe"
      handleClick={[Function]}
      index={0}
    >
      <div
        className="lead list-item items-list-item"
      >
        <div
          className="list-item-text lead"
          data-index={0}
          onClick={[Function]}
          role="button"
          tabIndex="0"
        >
          recipe
        </div>
        <ListItemIcons
          deleteIconClicked={[Function]}
          editIconClicked={[Function]}
        >
          <div
            className="d-flex align-items-center"
          >
            <Icon
              active=""
              className="items-list-item-icon icon"
              dataTarget=""
              dataToggle=""
              handleClick={[Function]}
              iconClass="fa fa-pencil"
              id="editIcon"
              onMouseEnter={[Function]}
              parentClass=""
              pointer={false}
              tip="hello"
              toolTip={false}
              toolTipId=""
              toolTipPlace="bottom"
              toolTipType="dark"
            >
              <div
                className="icon-wrapper"
                onClick={[Function]}
                onMouseEnter={[Function]}
                role="button"
                tabIndex="0"
              >
                <i
                  className="icon fa fa-pencil items-list-item-icon icon"
                  data-for=""
                  data-target=""
                  data-tip="hello"
                  data-toggle=""
                >
                  <span />
                </i>
              </div>
            </Icon>
            <Icon
              active=""
              className="items-list-item-icon icon"
              dataTarget=""
              dataToggle=""
              handleClick={[Function]}
              iconClass="fa fa-trash"
              id="deleteIcon"
              onMouseEnter={[Function]}
              parentClass=""
              pointer={false}
              tip="hello"
              toolTip={false}
              toolTipId=""
              toolTipPlace="bottom"
              toolTipType="dark"
            >
              <div
                className="icon-wrapper"
                onClick={[Function]}
                onMouseEnter={[Function]}
                role="button"
                tabIndex="0"
              >
                <i
                  className="icon fa fa-trash items-list-item-icon icon"
                  data-for=""
                  data-target=""
                  data-tip="hello"
                  data-toggle=""
                >
                  <span />
                </i>
              </div>
            </Icon>
          </div>
        </ListItemIcons>
      </div>
    </ListItem>
  </div>
</Item>
`;
